@@ -1,3 +1,8 @@
+2003-12-24  Alexander Clausen <alex@skip86.com>
+
+	* src/file.cpp src/modules/system.cpp: Fix for 860199; returning NULL in
+	  sp_module_system_open when doc == NULL; added error dialog.
+
 2003-12-24  MenTaLguY <mental@rydia.net>
 
 	* src/verbs.cpp: renamed 'XOR' to 'Exclude' on the menu
